The NavbarCollapse styles fixed

--- a/src/styles/Navbar/Navbar.module.scss
+++ b/src/styles/Navbar/Navbar.module.scss
@@ -7,7 +7,7 @@
 @media only screen and (max-width: $width-nav-toggle) {
   /* Bootstrap class. */
   .navbar {
-    .navbar__nav {
+    .NavbarCollapse__nav {
       display: inline-block;
       float: none;
     }
